apps/usenet/ombi/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ombi
  namespace: usenet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ombi
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ombi
    spec:
      containers:
        - name: ombi
          image: lscr.io/linuxserver/ombi:4.0.1602
          ports:
            - containerPort: 3579
          volumeMounts:
            - mountPath: /config
              name: data
          startupProbe:
            tcpSocket:
              port: 3579
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3579
            failureThreshold: 2
            periodSeconds: 30
            timeoutSeconds: 5
          resources: {}
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ombi-data
