apps/usenet/ombi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ombi
  namespace: usenet
spec:
  ports:
    - port: 3579
      targetPort: 3579
  selector:
    app: ombi
  type: ClusterIP
