apps/usenet/ombi/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ombi
  namespace: usenet
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cf.containeroo.ch/content: ${BASE_DOMAIN}
    cf.containeroo.ch/type: CNAME
spec:
  ingressClassName: traefik
  rules:
    - host: ombi.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ombi
                port:
                  number: 3579
